Fix spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -67,8 +67,7 @@ body {
 
 h1,
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin: 0;
 }
 
 #logoGlow {
